--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
     "@types/react-redux": "^7.1.18",
+    "axios": "^0.21.4",
+    "dotenv": "^10.0.0",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
